fix to alignment issue in mobile view

--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -32,7 +32,6 @@
         padding: 0;
         cursor: pointer;
         display: inline-block;
-        position: relative;
 
         @include breakpoint(sm) {
             height: $baseline * 6;
